Wrap up OAuth flow. Redirect to the page from where the login started Fix logout Header style tweaks

--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -1,15 +1,14 @@
 #header {
-	position: absolute;
-	top: 0;
-	left: 0;
+	position: relative;
 
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
-	align-items: flex-end;
+	align-items: baseline;
 
 	width: 100%;
-	height: 5rem;
+	margin-top: 3rem;
+	background-color: $background-color;
 
 	h1 {
 		margin: 0;
